--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <img class="image" src="/public/image-qr-code.png" alt="qrImage" />
+        <img class="image" src="/image-qr-code.png" alt="qrImage" />
         <div>
           <h3 class="title">
             Improve your front-end skills by building projects
