--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <div class="container">
       <div class="card">
-        <img class="image" src="image-qr-code.png" alt="qrImage" />
+        <img
+          class="image"
+          src="https://github.com/Radwan-Sghir/qr-code-component/blob/main/public/image-qr-code.png?raw=true"
+          alt="qrImage"
+        />
         <div>
           <h3 class="title">
             Improve your front-end skills by building projects
